# learning-fast-api

./: README.md  pyproject.toml
learning_fast_api/: app.py  schemas.py
tests/: conftest.py  test_app.py
