[tool.poetry]
name = "learning-fast-api"
version = "0.1.0"
description = ""
authors = ["felipe <profissionalf.andre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
