[tool.poetry]
name = "learning-fast-api"
version = "0.1.0"
description = ""
authors = ["felipe <profissionalf.andre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"
ruff = "^0.5.7"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run_app = "uvicorn learning_fast_api.app:app --reload"

pre_test = 'task lint'
test = "pytest --cov=learning_fast_api"
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
